syntax = "proto3";

package proto;

option go_package = "github.com/ygongq/grpc-demo/grpc-kindle/04_deadline/server/proto";

message unaryInterceptorRequest {
    string ID = 1;
}

message unaryInterceptorResponse {
    string Value = 1;
}

service unaryInterceptor {
    rpc getValue(unaryInterceptorRequest) returns(unaryInterceptorResponse) {}
}


